<resources>
    <string name="app_name">Aston_intensive_hometask_2_2_1</string>
    <string name="button_send_text">Send</string>
    <string name="text_header_txt">Message received</string>
    <string name="editText_main_hint_txt">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>